--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
       "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "workout-hanyang",
       "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "workout-hanyang.appspot.com",
       "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "705268870513",
-      "NEXT_PUBLIC_FIREBASE_APP_ID": "1:705268870513:web:fb90e8f80333191b411ad0",
-      "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID": "G-NPY61KX2HT"
+      "NEXT_PUBLIC_FIREBASE_APP_ID": "1:705268870513:web:fb90e8f80333191b411ad0"
     }
   }
   
