--- a/workout-hanyang/package.json
+++ b/workout-hanyang/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workout-tracker",
+  "name": "workout-hanyang",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.19",
-    "firebase": "^10.12.3",
+    "@tailwindcss/forms": "^0.5.7",
     "framer-motion": "^11.3.2",
     "next": "14.2.5",
     "react": "^18",
@@ -22,8 +21,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
